# bve-reborn-archive

./: .build-py  .clang-format  .clang-tidy  .clang-tidy-list.txt  .clang-tidy-manager  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BVE-Reborn.sln.DotSettings  CMakeLists.txt  CMakeSettings.json  LICENSE  OpenBVE2.kdev4  README.md  appveyor.yml  build-deps-unix.sh  build-deps-win.bat  build.py  bve-reborn.sln.DotSettings  docs.bat  docs.sh  jenkins.sh  project_structure.dot
Native/libs/bve-parsers/: CMakeLists.txt
Native/libs/bve-parsers/tests_old/: test_fs.cpp
Native/rust/cbindgen-meta/: Cargo.toml
Native/rust/unity-rust-test/: Cargo.toml
Native/rust/unity-rust-test/src/: lib.rs
Native/tests/stress-test/: CMakeLists.txt
Native/tests/test-runner/: CMakeLists.txt
Native/tests/test-runner/src/: main.cpp
lib/bve-core/: CMakeLists.txt
lib/bve-core/extras/swig/: bve-core.i
lib/bve-core/include/core/: container_view.hpp  datatypes.hpp  math.hpp  pair_hash.hpp  variant_util.hpp
lib/bve-core/src/: loggers.cpp  math.cpp
lib/bve-core/src/ispc_test/: ispc_sum.ispc
lib/bve-core/src/openbve/: filesystem.cpp
lib/bve-core/tests/: evaluate_curve.cpp
lib/bve-eastl/: CMakeLists.txt
lib/bve-log/: CMakeLists.txt
lib/bve-log/include/: log.hpp
lib/bve-log/src/: log.cpp
lib/bve-log/tests/: log.cpp  log_debug.cpp  log_test.hpp
lib/bve-parsers/: CMakeLists.txt
lib/bve-parsers/src/: b3d_csv_object.hpp  csv.hpp  csv_rw_route.hpp  function_scripts.hpp  ini.hpp  utils.cpp  utils.hpp
lib/bve-parsers/tests/: sample_relative_file_func.hpp  test_macro_util.hpp
lib/bve-parsers/tests_old/: old_tests_config.hpp.in  test_animated.cpp  test_csv.cpp  test_csv_obj.cpp  test_csv_route.cpp  test_fs.cpp  test_math.cpp
lib/bve-stl/: CMakeLists.txt
lib/bve-util/: CMakeLists.txt
lib/bve-util/src/: math.cpp  parsing.cpp
lib/bve-util/tests/: evaluate_curve.cpp
libcore/: CMakeLists.txt
libcore/include/core/: datatypes.hpp  gsl_string_span_iostream.hpp  inlining_util.hpp  macro_helpers.hpp  math.hpp  pair_hash.hpp  variant_util.hpp
libcore/src/: math.cpp
liblog/: CMakeLists.txt  readme.md
liblog/include/: log.hpp
liblog/src/: log.cpp
liblog/tests/: log.cpp  log_debug.cpp  log_test.hpp
libparsers/: CMakeLists.txt  compatability_filesystem.md
libparsers/include/config/: panel2_cfg.h
libparsers/include/parsers/: animated.hpp  b3d_csv.hpp  dependencies.hpp  errors.hpp  find_relative_file.hpp  function_scripts.hpp  parsers.hpp
libparsers/src/: animated_object.hpp  b3d_csv_object.hpp  csv.hpp  csv_object.hpp  csv_object_generator.cpp  csv_object_instruction_generator.cpp  csv_object_instruction_iostream.cpp  csv_object_parser.cpp  csv_object_parser.hpp  csv_parser.cpp  csv_parser.hpp  csv_parser_iostream.cpp  csv_rw_route.hpp  function_scripts.hpp  ini.hpp  panel2_cfg.h  utils.cpp  utils.hpp
libparsers/src/animated_object/: parser.cpp
libparsers/src/b3d_csv_object/: executor.cpp  instruction_generator.cpp  instruction_iostream.cpp  parse.cpp
libparsers/src/config/: extentions_cfg.cpp  panel2_cfg.cpp  sound_cfg.cpp
libparsers/src/core_csv/: iostream.cpp  parser.cpp
libparsers/src/core_ini/: iostream.cpp  parser.cpp
libparsers/src/csv_rw_route/: command_spliter.cpp  executor_pass1.cpp  executor_pass2.cpp  executor_pass3.cpp  executor_pass3.hpp  executor_pass3_options.cpp  executor_pass3_route.cpp  executor_pass3_structure.cpp  executor_pass3_texture.cpp  executor_pass3_train.cpp  instruction_generator.cpp  instruction_iostream.cpp  instructions.hpp  preprocessor.cpp  process_includes.cpp  route_structure.hpp
libparsers/src/errors/: add_error.cpp  iostream.cpp
libparsers/src/function_scripts/: function_script_grammar.bnf  instruction_builder.cpp  instruction_iostream.cpp  lexer.cpp  lexer_iostream.cpp  parse.cpp  parsefunc.cpp  parser.cpp  parser_iostream.cpp
libparsers/src/panel2/: parse.cpp
libparsers/src/xml/: dynamic_background.cpp  dynamic_backgrounds.cpp  dynamic_lighting.cpp  route_marker.cpp  stations.cpp  stations_and_request_stops.cpp  xml_node_helpers.hpp
libparsers/tests/: impl.cpp  main.cpp  sample_relative_file_func.hpp  test_animated.cpp  test_csv.cpp  test_csv_obj.cpp  test_csv_route.cpp  test_fs.cpp  test_fs_lexer.cpp  test_macro_util.hpp  test_math.cpp  tests.hpp  variant_compare.hpp
libparsers/tests/animated_object/: parser.cpp
libparsers/tests/b3d_csv_object/: command_parsing.cpp  commands.cpp
libparsers/tests/config/: extentions_cfg.cpp  panel2_cfg.cpp  sound_cfg.cpp
libparsers/tests/core_csv/: iostream.cpp  parse.cpp
libparsers/tests/core_ini/: iostream.cpp  parse.cpp
libparsers/tests/csv_rw_route/: preprocessor.cpp
libparsers/tests/errors/: add_error.cpp  error_tests.cpp  iostream.cpp  tests.cpp
libparsers/tests/function_scripts/: errors.cpp  functions.cpp  fuzzer.cpp  fuzzer.cpp.old  iostream_instructions.cpp  iostream_lexer.cpp  iostream_tree.cpp  lexer.cpp  operators.cpp  order_of_operations.cpp  variables.cpp  variables_indexed.cpp
libparsers/tests/panel2/: parse.cpp
libparsers/tests/simple_tests/: main.cpp  simple_tests_config.hpp.in  test_animated.cpp  test_csv.cpp  test_csv_obj.cpp  test_csv_route.cpp  test_fs.cpp  test_math.cpp
libparsers/tests/test_files/: README.md
libparsers/tests/util/: load_from_file_utf8_bom.cpp  match_against_lower.cpp  parse_color.cpp  parse_loose_float.cpp  parse_loose_integer.cpp  parse_time.cpp  remove_comments.cpp  split_text.cpp  strip_text.cpp
libparsers/tests/xml/: dynamic_background.cpp  dynamic_lighting.cpp  route_marker.cpp  stations.cpp  stations_and_request_stops.cpp
libparsers/tests_old/: main.cpp  old_tests_config.hpp.in  test_csv_route.cpp  test_math.cpp
libs/bve-core/: CMakeLists.txt
libs/bve-parsers/: CMakeLists.txt
libs/bve-parsers/tests/: sample_relative_file_func.hpp
libs/bve-parsers/tests_old/: test_animated.cpp  test_csv_route.cpp  test_math.cpp  tests.hpp
src/test-runner/: CMakeLists.txt
src/test-runner/src/: main.cpp
test-runner/: CMakeLists.txt
test_main/: CMakeLists.txt  main.cpp
(+555 files in other folders)
